# Sanuwave-MMWI_Server

./: .gitignore  .gitmodules  README.md  build_instructions.md  client_build_instructions.md
Utilities/: colmap_to_ply.sh
driver/: DW9714_DRIVER_GUIDE.md  pull_cfe_from_pi.sh  push_build_cfe.sh  rp1_cfe_proof_of_concept.md
driver/rpi_cfe/: cfe.c
driver/uninstall/DEBIAN/: control  postinst
sanuwave-desktop/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  bayer_image_widget.cpp  bayer_image_widget.h  build-deb.sh  calibration_viewer_dialog.cpp  calibration_viewer_dialog.h  camera_param_router.cpp  camera_param_router.h  camera_settings_manager.cpp  camera_settings_manager.h  camera_ui_controller.cpp  camera_ui_controller.h  cameratestdefinitions.h  cameratestpanel.cpp  cameratestpanel.h  cameratestrunner.cpp  cameratestrunner.h  channel_histogram_widget.cpp  channel_histogram_widget.h  cmake_presets.json  cmake_user_presets_example.json  colmap_sfm.cpp  colmap_sfm.h  diag_frame_metadata.h  diag_raw_frame.h  diag_sensor_info.h  dng_exporter.cpp  dng_exporter.h  expandablegroupbox.cpp  expandablegroupbox.h  image_decoding.cpp  image_decoding.h  imagedisplaywidget.cpp  imagedisplaywidget.h  imageviewerwindow.cpp  imageviewerwindow.h  imu_config_dialog.cpp  imu_config_dialog.h  (+40 more)
sanuwave-desktop/debian/: changelog  control  deb-desktop.txt  debhelper-build-stamp  files  postinst  postrm  rules  sanuwave-client.install  sanuwave-client.substvars
sanuwave-desktop/debian/.debhelper/sanuwave-client/: dbgsym-build-ids
sanuwave-desktop/debian/.debhelper/sanuwave-client/dbgsym-root/DEBIAN/: control  md5sums
sanuwave-desktop/debian/.debhelper/sanuwave-client/dbgsym-root/usr/share/doc/: sanuwave-client-dbgsym
sanuwave-desktop/debian/sanuwave-client/DEBIAN/: control  md5sums  postinst  postrm
sanuwave-desktop/resources/: resources.qrc
sanuwave-device/: .gitignore  CMakeLists.txt  dot_vscode.tar.xz
sanuwave-device/cmake/: FindTurboJPEG.cmake
sanuwave-device/imx219Driver/: imx219.c
sanuwave-device/imx219TuningFiles/: b0190-tuning-guide.md  imx219_af.json  merge_files.sh
sanuwave-device/imx708Driver/: imx708.c
sanuwave-device/include/: as7331_wrapper.h  camera_base.h  camera_factory.h  camera_imx219.h  camera_imx708.h  camera_manager.h  camera_types.h  capture_session.h  command_handler.h  command_router.h  frame_data.h  ijpeg_encoder.h  jpeg_opencv_encoder.h  jpeg_turbo_encoder.h  led_gpio_controller.h  lepton3.h  logger.h  lsm6ds3trc_wrapper.h  multi_camera_parameter_handler.h  param_extractor.h  path_utils.h  rgb_stream_worker.h  sensor_info.h  sensor_timing_calculator.h  session_fields.h  stream_context.h  stream_frame_meta.h  tcp_server.h  temp_monitor.h  thermal_camera.h  thermal_stream_worker.h  thread_safe_queue.h  vblank_strobe_controller.h  vd6283tx_wrapper.h  vl53l4cd_wrapper.h
sanuwave-device/packaging/: 99-sanuwave.rules  postinst  preinst  prerm
sanuwave-device/packaging/dkms/dw9714/: Makefile  dkms.conf
sanuwave-device/packaging/dkms/rp1-cfe/: Makefile  UPSTREAM_COMMIT  dkms.conf
sanuwave-device/packaging/dkms/rp1-cfe/patches/: rp1-cfe-sanuwave-strobe.patch
sanuwave-device/packaging/overlays/: imx219-b0190-vcm.dtbo
sanuwave-device/packaging/scripts/: install_deb_and_verify.sh  stage_rp1_cfe_dkms.sh
sanuwave-device/scripts/: sync-sysroot.sh
sanuwave-device/sdk/: raspi_I2C.c
sanuwave-device/src/: as7331_wrapper.cpp  camera_base.cpp  camera_factory.cpp  camera_imx219.cpp  camera_imx708.cpp  camera_manager.cpp  capture_session.cpp  command_handler.cpp  command_router.cpp  diagnostic_capture.cpp  jpeg_encoder_factory.cpp  jpeg_encoder_factory.h  jpeg_opencv_impl.cpp  jpeg_turbo_impl.cpp  led_gpio_controller.cpp  lepton3.cpp  lsm6ds3trc_wrapper.cpp  main.cpp  multi_camera_parameter_handler.cpp  param_extractor.cpp  path_utils.cpp  rgb_stream_worker.cpp  sensor_info.cpp  sensor_timing_calculator.cpp  tcp_server.cpp  temp_monitor.cpp  thermal_camera.cpp  thermal_stream_worker.cpp  turbo_jpeg_encoder.cpp  turbo_jpeg_encoder.h  vblank_strobe_controller.cpp  vd6283tx_wrapper.cpp  version.h.in  vl53l4cd_calibration.cpp  vl53l4cd_wrapper.cpp
sanuwave-device/tests/: CMakeLists.txt  MockI2Cdev.h  test_as7331.cpp  test_i2c_bus.cpp
sanuwave-device/tuning/: imx219_noir_af.json
shared/include/: protocol_constants.h
